--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>React FTW!</title>
+  <link href="https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="Styles.css">
 </head>
 
