--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>React FTW!</title>
+  <title>Slytherin Spell Selector</title>
   <link href="https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="Styles.css">
 </head>
