fading added to text

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Slytherin Spell Selector</title>
-  <link href="https://fonts.googleapis.com/css?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="Styles.css">
 </head>
 
